# voicelegacy

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  PROGRESS.md  PUBLISHING_CHECKLIST.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: ETHICS.md  FINETUNING_GUIDE.md  P3_EVALUATION.md  PLAYBOOK_FINETUNING_30MIN.md  PROCESO_COMPLETO_ENTREVISTAS.md  RELEASE.md
notebooks/: build_bridge_notebook.py  build_finetune_notebook.py  build_finetune_standalone_notebook.py  build_notebook.py  notebook_voicelegacy.ipynb  notebook_voicelegacy_bridge.ipynb  notebook_voicelegacy_finetune.ipynb  notebook_voicelegacy_finetune_standalone.ipynb
reports/: f0_outliers_20260520T024717Z.json  f0_outliers_20260520T025139Z.json  f0_outliers_20260520T155605Z.json  reference_quality_20260518T151400Z.json  reference_quality_20260518T152124Z.json  reference_quality_20260518T153126Z.json  reference_quality_20260518T160557Z.json  reference_quality_20260518T160954Z.json  reference_quality_20260520T023235Z.json  reference_quality_20260520T023921Z.json  reference_quality_20260520T024719Z.json  reference_quality_20260520T025036Z.json  reference_quality_20260520T025140Z.json  reference_quality_20260520T155606Z.json  reference_quality_20260520T155733Z.json  reference_quality_20260520T160229Z.json  reference_quality_20260520T160944Z.json  reference_quality_20260520T161327Z.json  reference_quality_20260520T161426Z.json
reports/denoise_eval/: denoise_evaluation_20260520T025600Z.json
scripts/: check_no_runtime_unassign.py  check_notebook_schema.py  check_pyproject_toml.py
tests/: conftest.py  test_audio.py  test_audio_conversion.py  test_cli.py  test_config.py  test_corpus.py  test_denoise_eval.py  test_diagnose.py  test_finetune_dataset.py  test_finetuned_inference.py  test_persistence.py  test_pipeline.py  test_quality.py  test_similarity.py  test_synthesis.py  test_text_inputs.py  test_text_strategy.py
voicelegacy/: __init__.py  audio.py  cli.py  config.py  corpus.py  denoise_eval.py  diagnose.py  finetune_dataset.py  finetuned_inference.py  logging_config.py  persistence.py  pipeline.py  quality.py  similarity.py  speakerscribe_schema.py  synthesis.py  telemetry.py  text_inputs.py  text_strategy.py
